# claudelab

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: exercise-reviewer.md
.claude/skills/check/: SKILL.md
.claude/skills/create-exercise/: SKILL.md
.claude/skills/curriculum-design/: SKILL.md
.claude/skills/help/: SKILL.md
.claude/skills/hint/: SKILL.md
.claude/skills/implement-task/: SKILL.md
.claude/skills/prd-create/: SKILL.md
.claude/skills/reset/: SKILL.md
.claude/skills/setup/: SKILL.md
.claude/skills/start/: SKILL.md
.claude/skills/status/: SKILL.md
.claude/skills/task-planning/: SKILL.md
.claude/skills/validate-exercise/: SKILL.md
docs/: product-idea-cclab-simplify.md
docs/curriculum/: CURRICULUM-mvp1.md  CURRICULUM-mvp2.md
docs/prd/: PRD-mvp1.md  PRD-mvp2.md
docs/tasks/: TASK-001.md  TASK-002.md  TASK-003.md  TASK-004.md  TASK-005.md  TASK-006.md  TASK-007.md  TASK-008.md  TASK-009.md  TASK-010.md  TASK-011.md  TASK-012.md  TASK-013.md  TASK-014.md  TASK-015.md  TASK-016.md  TASK-017.md  TASK-018.md  TASK-019.md  TASK-020.md  TASK-021.md  TASK-022.md  TASK-023.md  TASK-LIST-MVP2.md  TASK-LIST.md
exercises/fundamentals/cc-001/: hints.md  instructions.md  metadata.json  setup.sh  validate.sh
exercises/fundamentals/cc-002/: hints.md  instructions.md  metadata.json  setup.sh  validate.sh
tools/cclab-validator/: Cargo.toml
tools/cclab-validator/src/: discovery.rs  main.rs  reporter.rs  runner.rs
(+70 files in other folders)
