[package]
name = "cclab-validator"
version = "0.1.0"
edition = "2021"
description = "Exercise solvability tester for cclab — spawns Claude to solve exercises end-to-end"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
colored = "2"
anyhow = "1"
